--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -12,6 +12,12 @@
             {
               "leaf": "a1bfff15699aa6ae",
               "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"Calendar/Daily notes/2022-10-04.md\",\"mode\":\"source\",\"backlinks\":true,\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a1bfff15699aa6ae",
+              "group": null,
               "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"Cards/Index for Cards.md\",\"mode\":\"source\",\"backlinks\":true,\"source\":false}}",
               "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             },
@@ -30,8 +36,13 @@
           ]
         },
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Calendar/Daily notes/2022-10-04.md",
+            "mode": "source",
+            "backlinks": true,
+            "source": false
+          }
         }
       }
     ],
@@ -106,7 +117,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "Calendar/Daily notes/2022-10-04.md"
+              }
             }
           },
           {
@@ -115,6 +128,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "Calendar/Daily notes/2022-10-04.md",
                 "linksCollapsed": true,
                 "unlinkedCollapsed": true
               }
@@ -126,6 +140,7 @@
             "state": {
               "type": "localgraph",
               "state": {
+                "file": "Calendar/Daily notes/2022-10-04.md",
                 "options": {
                   "collapse-filter": false,
                   "search": "",
@@ -160,6 +175,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Calendar/Daily notes/2022-10-04.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -199,7 +215,7 @@
     "width": 246.67393493652344,
     "collapsed": true
   },
-  "active": "a4d1994dfc9f1870",
+  "active": "a1bfff15699aa6ae",
   "lastOpenFiles": [
     "Cards/About Cards.md",
     "Calendar/Daily notes/2022-10-04.md",
