--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title:               World for Sharing
+title:               Sharing Universe✔️ ∞🪐🔆
+
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
